website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.4.0/guides/docs/docs-create-doc.mdx
---
id: create-doc
description: Create a Markdown Document
slug: /create-doc
---

# 创建文档

创建一个 Markdown 文件 `greeting.md`，并将其放置在 `docs` 目录下。

```bash
website # root directory of your site
├── docs
│   └── greeting.md
├── src
│   └── pages
├── docusaurus.config.js
├── ...
```

```md
---
description: Create a doc page with rich content.
---

# Hello from Docusaurus

Are you ready to create the documentation site for your open source project?

## Headers

will show up on the table of contents on the upper right

So that your users will know what this page is all about without scrolling down or even without reading too much.

## Only h2 and h3 will be in the TOC by default.

You can configure the TOC heading levels either per-document or in the theme configuration.

The headers are well-spaced so that the hierarchy is clear.

- lists will help you
- present the key points
- that you want your users to remember
  - and you may nest them
    - multiple times
```

:::note

`docs` 目录下所有以下划线 (`_`) 为前缀的文件默认被视为"局部"页面，将被忽略。

了解更多关于[导入局部页面的信息](../markdown-features/markdown-features-react.mdx#importing-markdown)。

:::

## 文档 Front Matter {#doc-front-matter}

[Front Matter](../markdown-features/markdown-features-intro.mdx#front-matter) 用于为文档页面提供额外的元数据。Front Matter 是可选的——Docusaurus 能够在没有 Front Matter 的情况下推断出所有必要的元数据。例如，下文介绍的[文档标签](#doc-tags)功能就需要使用 Front Matter。所有可用的字段请参阅 [API 文档](../../api/plugins/plugin-content-docs.mdx#markdown-front-matter)。

## 文档标签 {#doc-tags}

标签在 Front Matter 中声明，为[文档侧边栏](./sidebar/index.mdx)之外提供了另一种分类维度。

可以定义内联标签，也可以引用在 [`tags 文件`](../../api/plugins/plugin-content-docs.mdx#tags-file)（可选，通常为 `docs/tags.yml`）中预定义的标签。

在以下示例中：

- `docusaurus` 引用的是 `docs/tags.yml` 中预定义的标签键
- `Releases` 是一个内联标签，因为它不存在于 `docs/tags.yml` 中

```md title="docs/my-doc.md"
---
tags:
  - Releases
  - docusaurus
---

# Title

Content
```

```yml title="docs/tags.yml"
docusaurus:
  label: 'Docusaurus'
  permalink: '/docusaurus'
  description: 'Docs related to the Docusaurus framework'
```

:::tip

标签也可以使用 `tags: [Demo, Getting started]` 的形式声明。

了解更多关于 [Yaml 数组语法](https://www.w3schools.io/file/yaml-arrays/)的所有可能形式。

:::

## 组织文件夹结构 {#organizing-folder-structure}

`docs` 文件夹下的 Markdown 文件排列方式可能会对 Docusaurus 内容生成产生多种影响。不过，大多数影响可以与文件结构解耦。

### 文档 ID {#document-id}

每个文档都有一个唯一的 `id`。默认情况下，文档 `id` 是相对于根 docs 目录的文档名称（不带扩展名）。

例如，`greeting.md` 的 ID 是 `greeting`，而 `guide/hello.md` 的 ID 是 `guide/hello`。

```bash
website # Root directory of your site
└── docs
   ├── greeting.md
   └── guide
      └── hello.md
```

然而，`id` 的**最后部分**可以在 Front Matter 中由用户定义。例如，如果 `guide/hello.md` 的内容如下定义，其最终 `id` 将是 `guide/part1`。

```md
---
id: part1
---

Lorem ipsum
```

ID 用于在手动编写侧边栏时引用文档，或在使用与文档相关的布局组件或钩子时使用。

### 文档 URL {#doc-urls}

默认情况下，文档的 URL 位置是其相对于 `docs` 文件夹的文件路径，但有少数例外。具体来说，如果文件命名为以下之一，则文件名不会包含在 URL 中：

- 命名为 `index`（不区分大小写）：`docs/Guides/index.md`
- 命名为 `README`（不区分大小写）：`docs/Guides/README.mdx`
- 与父文件夹同名：`docs/Guides/Guides.md`

在所有情况下，默认的 slug 都只是 `/Guides`，不包含 `/index`、`/README` 或重复的 `/Guides` 部分。

:::note

此约定与[分类索引约定](./sidebar/autogenerated.mdx#category-index-convention)完全一致。但需注意，`isCategoryIndex`配置项_不会_影响文档URL的生成。

:::

通过`slug`前置元数据可自定义文档URL。

例如，假设您的站点结构如下：

```bash
website # Root directory of your site
└── docs
    └── guide
        └── hello.md
```

默认情况下`hello.md`的访问路径将是`/docs/guide/hello`。您可以通过以下方式将其URL修改为`/docs/bonjour`：

```md
---
slug: /bonjour
---

Lorem ipsum
```

`slug`值会附加到文档插件的`routeBasePath`后（默认为`/docs`）。如需移除URL中的`/docs`前缀，请参阅[纯文档模式](docs-introduction.mdx#docs-only-mode)。

:::note

支持使用以下格式的slug：

- 绝对路径：`slug: /mySlug`、`slug: /`...
- 相对路径：`slug: mySlug`、`slug: ./../mySlug`...

:::

若希望文档可通过根路径访问（如`https://docusaurus.io/docs/`），可使用slug前置元数据：

```md
---
id: my-home-doc
slug: /
---

Lorem ipsum
```

### 侧边栏 {#sidebars}

使用[自动生成侧边栏](./sidebar/autogenerated.mdx)时，文件目录结构将决定侧边栏层级。

我们推荐的文件组织原则是：使文件系统与侧边栏结构保持镜像（从而无需手动编写`sidebars.js`文件），并通过`slug`前置元数据单独定制每个文档的URL。