website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.7.0/guides/docs/docs-create-doc.mdx
---
id: create-doc
description: Create a Markdown Document
slug: /create-doc
---

# 创建文档

创建一个 Markdown 文件 `greeting.md` 并放置在 `docs` 目录下。

```bash
website # root directory of your site
├── docs
│   └── greeting.md
├── src
│   └── pages
├── docusaurus.config.js
├── ...
```

```md
---
description: Create a doc page with rich content.
---

# Hello from Docusaurus

Are you ready to create the documentation site for your open source project?

## Headers

will show up on the table of contents on the upper right

So that your users will know what this page is all about without scrolling down or even without reading too much.

## Only h2 and h3 will be in the TOC by default.

You can configure the TOC heading levels either per-document or in the theme configuration.

The headers are well-spaced so that the hierarchy is clear.

- lists will help you
- present the key points
- that you want your users to remember
  - and you may nest them
    - multiple times
```

:::note

`docs` 目录下所有以下划线 (`_`) 为前缀的文件默认会被视为"局部"页面而被忽略。

了解更多关于[导入局部页面的信息](../markdown-features/markdown-features-react.mdx#importing-markdown)。

:::

## 文档 Front Matter {#doc-front-matter}

[Front Matter](../markdown-features/markdown-features-intro.mdx#front-matter) 用于为文档页面提供额外元数据。Front Matter 是可选的——Docusaurus 能够在没有 Front Matter 的情况下推断所有必要元数据。例如下文介绍的[文档标签](#doc-tags)功能就需要使用 Front Matter。所有可用字段请参阅 [API 文档](../../api/plugins/plugin-content-docs.mdx#markdown-front-matter)。

## 文档标签 {#doc-tags}

标签在 Front Matter 中声明，为[文档侧边栏](./sidebar/index.mdx)之外提供了另一种分类维度。

可以定义内联标签，也可以引用预定义在[`标签文件`](../../api/plugins/plugin-content-docs.mdx#tags-file)中的标签（可选，通常为 `docs/tags.yml`）。

以下示例中：

- `docusaurus` 引用的是 `docs/tags.yml` 中预定义的标签键
- `Releases` 是内联标签，因为它不存在于 `docs/tags.yml` 中

```md title="docs/my-doc.md"
---
tags:
  - Releases
  - docusaurus
---

# Title

Content
```

```yml title="docs/tags.yml"
docusaurus:
  label: 'Docusaurus'
  permalink: '/docusaurus'
  description: 'Docs related to the Docusaurus framework'
```

:::tip

标签也可以通过 `tags: [Demo, Getting started]` 的形式声明。

了解更多关于[YAML 数组语法](https://www.w3schools.io/file/yaml-arrays/)的可能形式。

:::

## 组织文件夹结构 {#organizing-folder-structure}

`docs` 文件夹下 Markdown 文件的排列方式会对 Docusaurus 内容生成产生多方面影响，但大多数情况下可以与文件结构解耦。

### 文档 ID {#document-id}

每个文档都有唯一的 `id`。默认情况下，文档 `id` 是相对于 docs 根目录的文档名称（不含扩展名）。

例如 `greeting.md` 的 ID 是 `greeting`，而 `guide/hello.md` 的 ID 是 `guide/hello`。

```bash
website # Root directory of your site
└── docs
   ├── greeting.md
   └── guide
      └── hello.md
```

但用户可以通过 Front Matter 自定义 `id` 的**最后部分**。例如若 `guide/hello.md` 的内容如下定义，其最终 `id` 将是 `guide/part1`。

```md
---
id: part1
---

Lorem ipsum
```

该 ID 用于在手动编写侧边栏时引用文档，或使用文档相关布局组件及钩子时使用。

### 文档 URL {#doc-urls}

默认情况下，文档的 URL 路径是其相对于 `docs` 文件夹的文件路径，但有几种例外情况。若文件名符合以下任一情形，文件名将不会出现在 URL 中：

- 名为 `index`（不区分大小写）：`docs/Guides/index.md`
- 名为 `README`（不区分大小写）：`docs/Guides/README.mdx`
- 与父文件夹同名：`docs/Guides/Guides.md`

以上所有情况默认生成的 slug 都仅为 `/Guides`，不会包含 `/index`、`/README` 或重复的 `/Guides` 部分。

:::note

此约定与[分类索引约定](./sidebar/autogenerated.mdx#category-index-convention)完全一致。但需注意，`isCategoryIndex`配置项_不会_影响文档URL的生成。

:::

使用`slug`前置元数据可自定义文档URL。

例如，假设您的站点结构如下：

```bash
website # Root directory of your site
└── docs
    └── guide
        └── hello.md
```

默认情况下`hello.md`的访问路径将是`/docs/guide/hello`。您可以通过以下方式将其URL修改为`/docs/bonjour`：

```md
---
slug: /bonjour
---

Lorem ipsum
```

`slug`值会附加到文档插件的`routeBasePath`（默认为`/docs`）之后。如需去除URL中的`/docs`前缀，请参阅[纯文档模式](docs-introduction.mdx#docs-only-mode)配置方法。

:::note

支持使用以下形式：

- 绝对路径slug：`slug: /mySlug`、`slug: /`...
- 相对路径slug：`slug: mySlug`、`slug: ./../mySlug`...

:::

若需将文档部署至根路径（如`https://docusaurus.io/docs/`），可通过slug前置元数据实现：

```md
---
id: my-home-doc
slug: /
---

Lorem ipsum
```

### 侧边栏 {#sidebars}

使用[自动生成侧边栏](./sidebar/autogenerated.mdx)时，文件目录结构将决定侧边栏层级。

我们推荐的目录组织原则是：使文件系统与侧边栏结构保持镜像关系（从而无需手动编写`sidebars.js`文件），并通过`slug`前置元数据灵活定制每个文档的URL。